fix: spacing

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -111,7 +111,7 @@ hr {
 }
 
 hr.large__spacing {
-  margin: 2rem 0 3rem;
+  margin: 1.25rem 0;
 }
 
 /* tables */
